--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>music</title>
-  </head>
-  <body></body>
+	<head>
+		<meta charset="utf-8" />
+		<title>music</title>
+	</head>
+	<body>
+		<div id="app">
+			<router-view></router-view>
+		</div>
+	</body>
 </html>
