基本完成发现页，cors问题未解决

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<meta content="user-scalable=0" name="viewport" />
 		<title>music</title>
 	</head>
 	<body>
