--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta content="user-scalable=0" name="viewport" />
+		<link
+			href="http://p3.music.126.net/tBTNafgjNnTL1KlZMt7lVA==/18885211718935735.jpg"
+			rel="shortcut icon"
+		/>
 		<title>music</title>
 	</head>
 	<body>
