--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta content="user-scalable=0" name="viewport" />
+
+		<meta
+			name="viewport"
+			content="width=device-width,height=device-height, user-scalable=no,initial-scale=1, minimum-scale=1, maximum-scale=1,target-densitydpi=device-dpi "
+		/>
 		<link
 			href="http://p3.music.126.net/tBTNafgjNnTL1KlZMt7lVA==/18885211718935735.jpg"
 			rel="shortcut icon"
